@@ -26,6 +26,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Add log entry in `WsAndHttpChannelizerHandler`.
 * Changed `IdentityRemovalStrategy` to omit `IdentityStep` if only with `RepeatEndStep` under `RepeatStep`.
 * Changed Gremlin grammar to make use of `g` to spawn child traversals a syntax error.
+* Added `unexpected-response` handler to `ws` for `gremlin-javascript`
 
 [[release-3-7-3]]
 === TinkerPop 3.7.3 (October 23, 2024)
